--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PythonPackager 👍)</title>
+  <title>Eggshell</title>
   <style>
     body { background-color: #000; color: #fff; font-family: sans-serif; padding: 2rem; line-height: 1.6; }
     h2 { color: #00aaff; margin-top: 2rem; }
@@ -48,7 +48,7 @@
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       const owner = 'tzarbomba64';
-      const repo = 'PythonPackager';
+      const repo = 'Eggshell';
       const branch = 'main';
       const readmeUrl = `https://raw.githubusercontent.com/${owner}/${repo}/${branch}/README.md`;
       const listApiUrl = `https://api.github.com/repos/${owner}/${repo}/contents/list?ref=${branch}`;
