--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       const owner = 'tzarbomba64';
-      const repo = 'Eggshell';
+      const repo = 'Eggshell-Official';
       const branch = 'main';
       const readmeUrl = `https://raw.githubusercontent.com/${owner}/${repo}/${branch}/README.md`;
       const listApiUrl = `https://api.github.com/repos/${owner}/${repo}/contents/list?ref=${branch}`;
