--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Eggshell</title>
+  <title>Eggshell)</title>
   <style>
     body { background-color: #000; color: #fff; font-family: sans-serif; padding: 2rem; line-height: 1.6; }
     h2 { color: #00aaff; margin-top: 2rem; }
@@ -142,5 +142,3 @@
   </script>
 </body>
 </html>
-
-Remove at launch FULL - T/773KD92
